src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>ReasonLevel1__c</fullName>
        <description>The reason of the complaint.</description>
        <inlineHelpText>The reason of the complaint.</inlineHelpText>
        <label>Reason (Level 1)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SubType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appearance</fullName>
                </value>
                <value>
                    <fullName>Foreign Material</fullName>
                </value>
                <value>
                    <fullName>Illness / Injury</fullName>
                </value>
                <value>
                    <fullName>Operation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Package Design</fullName>
                </value>
                <value>
                    <fullName>Package Quality</fullName>
                </value>
                <value>
                    <fullName>Package Quantity</fullName>
                </value>
                <value>
                    <fullName>Past Code</fullName>
                </value>
                <value>
                    <fullName>Spoilage</fullName>
                </value>
                <value>
                    <fullName>Taste / Odor</fullName>
                </value>
                <value>
                    <fullName>Texture</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
                <value>
                    <fullName>Wrong Price</fullName>
                </value>
                <value>
                    <fullName>Wrong Product (in order entry)</fullName>
                </value>
                <value>
                    <fullName>Wrong Customer Number (number in order entry)</fullName>
                </value>
                <value>
                    <fullName>Incorrect Customer Master Data Setup</fullName>
                </value>
                <value>
                    <fullName>Wrong EAN</fullName>
                </value>
                <value>
                    <fullName>Customer Placed Wrong Order</fullName>
                </value>
                <value>
                    <fullName>Wrong Amount Entered In Order</fullName>
                </value>
                <value>
                    <fullName>Wrong PO Number</fullName>
                </value>
                <value>
                    <fullName>Delivery Not Complete</fullName>
                </value>
                <value>
                    <fullName>Delivered At Wrong Address</fullName>
                </value>
                <value>
                    <fullName>Picking Error</fullName>
                </value>
                <value>
                    <fullName>Customer Denied Delivery</fullName>
                </value>
                <value>
                    <fullName>No One To Sign For Delivery</fullName>
                </value>
                <value>
                    <fullName>Missing Delivery</fullName>
                </value>
                <value>
                    <fullName>Product Damaged By LSP</fullName>
                </value>
                <value>
                    <fullName>Complaint About Behavior Of Transporter</fullName>
                </value>
                <value>
                    <fullName>Problems With Frostboxes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReasonLevel2__c</fullName>
        <description>The sub-reason of the complaint.</description>
        <label>Reason (Level 2)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ReasonLevel1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appearance, Other</fullName>
                </value>
                <value>
                    <fullName>Broken / Cracked</fullName>
                </value>
                <value>
                    <fullName>Burnt</fullName>
                </value>
                <value>
                    <fullName>Color Issue</fullName>
                </value>
                <value>
                    <fullName>Fatty, Oily</fullName>
                </value>
                <value>
                    <fullName>Foam</fullName>
                </value>
                <value>
                    <fullName>Sediment</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                </value>
                <value>
                    <fullName>Agricultural</fullName>
                </value>
                <value>
                    <fullName>Foreign Material, Other</fullName>
                </value>
                <value>
                    <fullName>Glass</fullName>
                </value>
                <value>
                    <fullName>Highly Sensitive FM</fullName>
                </value>
                <value>
                    <fullName>Metal</fullName>
                </value>
                <value>
                    <fullName>Plastic</fullName>
                </value>
                <value>
                    <fullName>Illness Symptoms</fullName>
                </value>
                <value>
                    <fullName>Injury</fullName>
                </value>
                <value>
                    <fullName>Auto Operation</fullName>
                </value>
                <value>
                    <fullName>Brewer</fullName>
                </value>
                <value>
                    <fullName>False Empty Detection</fullName>
                </value>
                <value>
                    <fullName>Fire-Machine</fullName>
                </value>
                <value>
                    <fullName>Heating Problems</fullName>
                </value>
                <value>
                    <fullName>Leaking</fullName>
                </value>
                <value>
                    <fullName>Lights</fullName>
                </value>
                <value>
                    <fullName>No drink</fullName>
                </value>
                <value>
                    <fullName>Noisy</fullName>
                </value>
                <value>
                    <fullName>Operation, Other</fullName>
                </value>
                <value>
                    <fullName>Sparks</fullName>
                </value>
                <value>
                    <fullName>Steam</fullName>
                </value>
                <value>
                    <fullName>Volume</fullName>
                </value>
                <value>
                    <fullName>Complaint, Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Indicates the reason for the complaint to be created.</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bill to party</fullName>
                </value>
                <value>
                    <fullName>Claim</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Contract coverage</fullName>
                </value>
                <value>
                    <fullName>Contract termination</fullName>
                </value>
                <value>
                    <fullName>Contract pricing</fullName>
                </value>
                <value>
                    <fullName>Counter</fullName>
                </value>
                <value>
                    <fullName>Damage handling/packaging</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Employee/department</fullName>
                </value>
                <value>
                    <fullName>HACCP</fullName>
                </value>
                <value>
                    <fullName>Ingredients</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Opening hours</fullName>
                </value>
                <value>
                    <fullName>Order entry</fullName>
                </value>
                <value>
                    <fullName>Parts and/or picknote in bag of colleague</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Product parts</fullName>
                </value>
                <value>
                    <fullName>Quantity wrong to picking note</fullName>
                </value>
                <value>
                    <fullName>Quotation</fullName>
                </value>
                <value>
                    <fullName>Repeated service</fullName>
                </value>
                <value>
                    <fullName>Response time</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>Return parts not accepted</fullName>
                </value>
                <value>
                    <fullName>Return parts not processed in SAP</fullName>
                </value>
                <value>
                    <fullName>Scheduling</fullName>
                </value>
                <value>
                    <fullName>Service confirmation – 1V</fullName>
                </value>
                <value>
                    <fullName>Service job charged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RepeatVisitCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RepeatVisitCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RepeatVisit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repeat Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to map the engineer who entered the follow-up request onto the case.</description>
        <label>Reporting Engineer</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Cases (Reporting Engineer)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestorEmail__c</fullName>
        <description>The email of the requestor.</description>
        <label>Requestor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RequestorName__c</fullName>
        <description>The name of the person who is requesting the service if it cannot be linked to a contact directly.</description>
        <label>Requestor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequiredEngineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TS: Indicates the required engineer.</description>
        <label>Required Engineer</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Cases (Required Engineer)</relationshipLabel>
        <relationshipName>ResourceCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequiresCostEstimate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the engineer must provide a cost estimate.</description>
        <label>Requires Cost Estimate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResponseProfile__c</fullName>
        <label>Response Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether the case was subjected to a return needed. If this field is blank and the case is closed, then the cases is indicates as first time fix.</description>
        <label>Return Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RootCauseSolution__c</fullName>
        <label>Root Cause Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Run_Default_Case_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a checkbox that will ensure that TS_Case Routing for Account Default Owner (process builder) will only run once during update. This process will run in email-to-case during update.</description>
        <label>Run Default Case Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S10_S15__c</fullName>
        <description>Tick checkbox if case sub-type is Corrective Maintenance or 1ste Line Corrective Maintenance.</description>
        <formula>OR(
TEXT(SubType__c) = &quot;S10&quot; ,
TEXT(SubType__c) = &quot;S15&quot;
)</formula>
        <inlineHelpText>Tick checkbox if case sub-type is Corrective Maintenance or 1ste Line Corrective Maintenance.</inlineHelpText>
        <label>S10 / S15</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLADate__c</fullName>
        <description>Indicates the SLA time to resolve the case and will be automatically calculated.</description>
        <label>SLA Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLARecalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An indication that the SLA is recalculated if the earliest start date was 4 hours or less than 4 hours from the original calculated SLA date.</description>
        <label>SLA Recalculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <description>Country codes</description>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_0333</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>SAP_0975</fullName>
                    <label>Denmark</label>
                </value>
                <value>
                    <fullName>SAP_6706</fullName>
                    <label>France</label>
                </value>
                <value>
                    <fullName>SAP_6864</fullName>
                    <label>Norway</label>
                </value>
                <value>
                    <fullName>SAP_0976</fullName>
                    <label>Sweden</label>
                </value>
                <value>
                    <fullName>SAP_0111</fullName>
                    <label>Netherlands</label>
                </value>
                <value>
                    <fullName>SAP_0080</fullName>
                    <label>Spain</label>
                </value>
                <value>
                    <fullName>SAP_6709</fullName>
                    <label>Ireland</label>
                </value>
                <value>
                    <fullName>SAP_6712</fullName>
                    <label>Germany</label>
                </value>
                <value>
                    <fullName>SAP_6750</fullName>
                    <label>Great Britain</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <formula>TEXT(Contact.Salutation)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleBookingAppointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Booking Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScheduleManually__c</fullName>
        <defaultValue>false</defaultValue>
        <description>KTS - 369: Quickly Escalate a Case. Field responsible for identifying case records tagged for manual schedule</description>
        <label>Schedule Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Additional_Stakeholder_Email__c</fullName>
        <description>Used to send the closure email to</description>
        <label>Second Additional Stakeholder Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Second_Additional_Stakeholder_has_email__c</fullName>
        <description>Used in the Second  Additional Stakeholder logic to set the emails on the Case or not. ( only when is TRUE)</description>
        <formula>NOT(ISNULL( AccountLocation__c)) &amp;&amp; 
NOT(ISNULL( AccountLocation__r.Second_Additional_Case_Contact__c)) &amp;&amp; 
NOT(ISBLANK( AccountLocation__r.Second_Additional_Case_Contact__r.Email )) &amp;&amp;
AccountLocation__r.StakeholderNotification__c = TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Additional Stakeholder has email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SecondaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This indicates the secondary contact for movement scenario.</description>
        <label>Secondary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Secondary Contact)</relationshipLabel>
        <relationshipName>SecondaryContactCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SendTo3rdParty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to 3rd Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Case_Cancel_Notif_to_Stakeholder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Case Cancel Notif to Stakeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Case_Cancelation_Notif_to_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Case Cancelation Notif to Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Case_Closure_Notif_to_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Case Closure Notif to Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Case_Closure_Notif_to_Stakeholder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Case Closure Notif to Stakeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Case_Create_Notif_to_Stakeholder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Case Create Notif to Stakeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Case_Create_Notification_to_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Case Create Notification to Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <formula>Asset__r.Serial_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceDateExceptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TS: Indicates that there are exceptions on the preferred delivery week.</description>
        <label>Service Date Exception(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceWindow__c</fullName>
        <label>Service Window</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Hours__c</fullName>
        <label>Service Hours</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SalesOrganization__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BE 08-17 working days</fullName>
                </value>
                <value>
                    <fullName>BE 08-12 only morning</fullName>
                </value>
                <value>
                    <fullName>BE 12-17 only afternoon</fullName>
                </value>
                <value>
                    <fullName>BE 8-17 not on Monday Morning</fullName>
                </value>
                <value>
                    <fullName>BE 8-17 not on Wednesday Afternoon</fullName>
                </value>
                <value>
                    <fullName>BE 8-17 not on Monday</fullName>
                </value>
                <value>
                    <fullName>BE 8-17 not on Tuesday</fullName>
                </value>
                <value>
                    <fullName>BE 8-17 not on Wednesday</fullName>
                </value>
                <value>
                    <fullName>BE 8-17 not on Thursday</fullName>
                </value>
                <value>
                    <fullName>BE 8-17 not on Friday</fullName>
                </value>
                <value>
                    <fullName>BE Always book appointment</fullName>
                </value>
                <value>
                    <fullName>DK 8-16</fullName>
                </value>
                <value>
                    <fullName>DK 8-12</fullName>
                </value>
                <value>
                    <fullName>DK 12-16</fullName>
                </value>
                <value>
                    <fullName>DK 10-16</fullName>
                </value>
                <value>
                    <fullName>DK 8-10</fullName>
                </value>
                <value>
                    <fullName>DK Always book appointment</fullName>
                </value>
                <value>
                    <fullName>NO 8-16 all day service</fullName>
                </value>
                <value>
                    <fullName>NO 8-12 only morning</fullName>
                </value>
                <value>
                    <fullName>NO 12-16 only evening</fullName>
                </value>
                <value>
                    <fullName>NO 8-11 before lunch</fullName>
                </value>
                <value>
                    <fullName>NO 13-16 after lunch</fullName>
                </value>
                <value>
                    <fullName>NO Always book appointment</fullName>
                </value>
                <value>
                    <fullName>Mon - Fri 09:00-17:00</fullName>
                    <isActive>false</isActive>
                    <label>Mon - Fri 09:00-17:00</label>
                </value>
                <value>
                    <fullName>Mon - Fri 09:00-17:30</fullName>
                    <isActive>false</isActive>
                    <label>Mon - Fri 09:00-17:30</label>
                </value>
                <value>
                    <fullName>Mon - Fri 12:00-22:00</fullName>
                    <isActive>false</isActive>
                    <label>Mon - Fri 12:00-22:00</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SignatureClosing__c</fullName>
        <formula>Country_Setting_Signature_Record__r.SignatureClosing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signature Closing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignatureCountryWebAddress__c</fullName>
        <formula>Country_Setting_Signature_Record__r.SignatureCountryWebAddress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Web Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignatureDepartmentEmail__c</fullName>
        <formula>Country_Setting_Signature_Record__r.SignatureDepartmentEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignatureDepartmentPhone__c</fullName>
        <formula>Country_Setting_Signature_Record__r.SignatureDepartmentPhone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignatureLegalEntity__c</fullName>
        <formula>Country_Setting_Signature_Record__r.SignatureLegalEntity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Title__c</fullName>
        <formula>Country_Setting_Signature_Record__r.Signature_Title__c</formula>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_ID__c</fullName>
        <formula>AccountLocation__r.Apttus_Config2__AccountId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Type__c</fullName>
        <description>Indicates the type of solution for the case.</description>
        <label>Solution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
                <value>
                    <fullName>Invalid Complaint</fullName>
                </value>
                <value>
                    <fullName>Credit Note Goodwill</fullName>
                </value>
                <value>
                    <fullName>Change Contract</fullName>
                </value>
                <value>
                    <fullName>Change Master Data</fullName>
                </value>
                <value>
                    <fullName>Explain Procedure</fullName>
                </value>
                <value>
                    <fullName>Reprint Invoice</fullName>
                </value>
                <value>
                    <fullName>Free Product</fullName>
                </value>
                <value>
                    <fullName>Apologize</fullName>
                </value>
                <value>
                    <fullName>Return Machine</fullName>
                </value>
                <value>
                    <fullName>Return Ingredients</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <description>This is a picklist describing the type of case in more detail.</description>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Generic question</fullName>
                </value>
                <value>
                    <fullName>Field Service Tips</fullName>
                </value>
                <value>
                    <fullName>S10</fullName>
                    <label>Corrective Maintenance</label>
                </value>
                <value>
                    <fullName>S15</fullName>
                    <label>1st Line Corrective Maintenance</label>
                </value>
                <value>
                    <fullName>S30</fullName>
                    <label>Preventive Maintenance</label>
                </value>
                <value>
                    <fullName>S31</fullName>
                    <label>Preventive Check</label>
                </value>
                <value>
                    <fullName>S32</fullName>
                    <label>Water-Filter Change</label>
                </value>
                <value>
                    <fullName>S40</fullName>
                    <label>Installation</label>
                </value>
                <value>
                    <fullName>S41</fullName>
                    <label>De-Installation</label>
                </value>
                <value>
                    <fullName>S43</fullName>
                    <label>Configuration Change</label>
                </value>
                <value>
                    <fullName>S51</fullName>
                    <label>Pre-Visit Installation</label>
                </value>
                <value>
                    <fullName>S52</fullName>
                    <label>After-Visit Installation</label>
                </value>
                <value>
                    <fullName>S60</fullName>
                    <label>Modification</label>
                </value>
                <value>
                    <fullName>Not assigned</fullName>
                </value>
                <value>
                    <fullName>Quality Ingredients</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Machines</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>S44</fullName>
                    <label>Workshop</label>
                </value>
                <value>
                    <fullName>S50</fullName>
                    <label>Pick-Up/Drop-off</label>
                </value>
                <value>
                    <fullName>S20</fullName>
                    <label>Machine Care</label>
                </value>
                <value>
                    <fullName>S53</fullName>
                    <label>Assistance</label>
                </value>
                <value>
                    <fullName>Contract question/change</fullName>
                </value>
                <value>
                    <fullName>CMD question/change</fullName>
                </value>
                <value>
                    <fullName>Invoice question/change</fullName>
                </value>
                <value>
                    <fullName>Report question/request</fullName>
                </value>
                <value>
                    <fullName>Product information request</fullName>
                </value>
                <value>
                    <fullName>Movement</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Symptom_s__c</fullName>
        <label>Symptom(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_BI_Coffee_Down_Time__c</fullName>
        <description>It shows a coffee down time for field service when a coffee is not running until it is fixed</description>
        <inlineHelpText>Shows the down time of coffee machine (in hour)</inlineHelpText>
        <label>BI Coffee Down Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TS_BI_Resolution_Time__c</fullName>
        <description>It describes the case complaint resolution time, the time between the case created and the case closed, in minutes.</description>
        <inlineHelpText>It is used by BI to define case complaint resolution time (in hour)</inlineHelpText>
        <label>BI Resolution Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TS_BI_Response_Time__c</fullName>
        <description>It shows the time between case created and the case is closed, only used for case type complaint (in hour)</description>
        <inlineHelpText>It is used for BI to define the case complaint resolution time (in hour)</inlineHelpText>
        <label>BI Response_Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TS_BI_WorkOrder_Finish__c</fullName>
        <description>it shows the end date-time of the work order</description>
        <inlineHelpText>It is used by BI to define the end date-time of the work order</inlineHelpText>
        <label>BI Actual Finish</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS_BI_WorkOrder_Start__c</fullName>
        <description>It shows the start date-time of the work order (Woli )</description>
        <inlineHelpText>it is used for BI for obtaining the start date-time of the work order</inlineHelpText>
        <label>BI Actual Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS_Best_Before_Date__c</fullName>
        <inlineHelpText>Ideal date.</inlineHelpText>
        <label>Best Before Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TS_BundleId__c</fullName>
        <formula>Asset__r.Apttus_Config2__BundleAssetId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TS_BundleId</label>
        <type>Text</type>
    </fields>
</CustomObject>